more global css definition for relate fileds

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -2628,10 +2628,11 @@ table.dateTime {
 }
 
 #parent_name, input.sqsEnabled {
-    display: block;
+    /* display: block; */
     clear: both;
     margin-top: 8px;
     width: 50%;
+    margin-right: 8px;
 }
 
 .pageNumbers {
@@ -4786,6 +4787,10 @@ fieldset[disabled] .btn-primary.active {
     content: url('../../../../index.php?entryPoint=getImage&themeName=SuiteP&themeName=SuiteP&imageName=id-ff-remove-nobg.png');
 }
 
+#search_form span.id-ff.multiple {
+    top: 10px;
+    position: relative;
+}
 #EditView_tabs span.id-ff.multiple [type="button"] img,
 #conditionLines span.id-ff.multiple [type="button"] img {
     content: none;
@@ -5262,14 +5267,6 @@ input[type=text], input[type=password], input:not([type]), textarea {
     border-radius: 4px;
     padding: 5px;
     line-height: 40px;
-}
-
-div[type="relate"] input[type=text],
-div[type="relate"] input[type=password],
-div[type="relate"] input:not([type]),
-div[type="relate"] textarea {
-    float: left;
-    margin-right: 5px;
 }
 
 .search_form input[type=text], .search_form textarea {
