Fixes #2112. Text in labels doesn't break and can overlay fields

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -1056,7 +1056,7 @@ th, td {
     font-weight: 700;
     line-height: 48px;
     text-align: left;
-    white-space: nowrap;
+    white-space: normal;
     vertical-align: baseline;
 
 }
