fixing sqs relate fields

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -2628,10 +2628,9 @@ table.dateTime {
 }
 
 #parent_name, input.sqsEnabled {
-    display: block;
+    display: inline-block;
     clear: both;
     margin-top: 8px;
-    width: 50%;
 }
 
 .pageNumbers {
