--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -9664,7 +9664,8 @@ table tr#delegates_search {
         right: 0;
         min-width: 215px;
     }
-    #search_form .edit.view.search.basic .row:nth-of-type(3n) .button, input[type=submit],
+    #search_form .edit.view.search.basic .row:nth-of-type(3n) .button,
+    #search_form .edit.view.search.basic .row:nth-of-type(3n) input[type=submit],
     #search_form .edit.view.search.basic .row:nth-of-type(3n) input[type=button],
     #search_form .edit.view.search.basic .row:nth-of-type(3n) input[type=reset] {
         width: 43%;
